tidying and debugging

--- a/Simulation.html
+++ b/Simulation.html
@@ -20,7 +20,7 @@
                 </canvas>
             </div>
             <div id = "results">
-                Click anywhere on the water column to discover the statistics
+                Click anywhere on the water column to discover the statistics<br>
             </div>
         </div>
     </body>
